# controllers/login.js
@@ -1,12 +1,11 @@
 // IMPORT REQUIRED MODULES
 const mongodb = require('../models/db/connect-db');
-const chunks = require('../utilities/chunks');
-
-const dotenv = require('dotenv');
+// const chunks = require('../utilities/chunks');
 const bcrypt = require('bcryptjs')
 const jwt = require('jsonwebtoken')
 
 const { logError } = require('../error-handling/errorHandler');
+const { updateAQuestion } = require('./question');
 
 
 // CREATE question CONTROLLER OBJECT HOLDER
@@ -38,6 +37,15 @@ loginController.loginOptions = async function (req, res) {
     res.send(options);
 }
 
+// login user instruction
+loginController.loginInstruction = async function (req, res) {
+    const instructionObject = {
+        instruction: "Goto the url below and find the post: login/user section in the Api Document. Input your username and password to login.",
+        url: `http://${process.env.SERVER_HOST}:${process.env.SERVER_PORT}/api-docs`
+    }
+    return res.send(instructionObject);
+}
+
 
 // traditional login (username and password)
 loginController.loginUser = async function (req, res) {
@@ -54,7 +62,7 @@ loginController.loginUser = async function (req, res) {
         console.log(`Username Found - User: ${JSON.stringify(findUsername)}`);  // for testing purpose
         if (findUsername) {
             // login user
-            loginUser(password, findUsername);
+            return loginUser(password, findUsername);
         }
 
         // check if email was entered instead
@@ -62,8 +70,11 @@ loginController.loginUser = async function (req, res) {
         console.log(`Email Found - User: ${JSON.stringify(findEmail)}`);  // for testing purpose
         if (findEmail) {
             // login user
-           loginUser(password, findEmail);
+           return loginUser(password, findEmail);
         }
+
+        // if username is not found
+        return res.status(404).json({ message: 'username/email you entered does not correspond with any user. Please, enter a valid username.' });
 
     } catch (err) {
         logError(err);
@@ -75,7 +86,7 @@ loginController.loginUser = async function (req, res) {
         try {
             if (await bcrypt.compare(password, userData.password)) {
                 delete userData.password;  // remove password returned data -- for security reasons
-                userData.displayName = `${userData.firstname} ${userData.lastname}`;  // add display name;
+                userData.displayName = `${userData.firstname.slice(0, 1).toUpperCase()}${userData.firstname.slice(1)} ${userData.lastname.slice(0, 1).toUpperCase()}${userData.lastname.slice(1)}`;  // add display name;
                 const accessToken = jwt.sign(userData, process.env.ACCESS_TOKEN_SECRET, { expiresIn: 3600 });
                 // set cookie
                 if (process.env.NODE_ENV == 'development') {
@@ -83,7 +94,8 @@ loginController.loginUser = async function (req, res) {
                 } else {
                     res.cookie("jwt", accessToken, { httpOnly: true, secure: true, maxAge: 3600 * 1000 });
                 }
-                res.session.user = userData;
+                console.log(`USER DATA: ${JSON.stringify(userData)}`);  // for testing purpose
+                req.session.user = userData;
                 return res.redirect("/");
             } else {
                 return res.status(400).json({message: 'Invalid Password. Please check your passoword and try again.'});
@@ -113,6 +125,7 @@ loginController.authenticateGithubCallBack = (req, res) => {
         res.cookie("jwt", accessToken, { httpOnly: true, secure: true, maxAge: 3600 * 1000 });
     }
 
+    console.log(`CURRENT USER OBJECT: ${JSON.stringify(req.user)}`);
     req.session.user = req.user;
     res.redirect('/');
 }
